logs/simpack.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/peppercorn'...
Listing './lib/python3.5/site-packages/peppercorn-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simpack'...
Compiling './lib/python3.5/site-packages/simpack/_MPH.py'...
***   File "./lib/python3.5/site-packages/simpack/_MPH.py", line 70
    raise TypeError, "not a valid non-string sequence or mapping object", traceback
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simpack/arduino.py'...
***   File "./lib/python3.5/site-packages/simpack/arduino.py", line 33
    print "<`%s`" % l
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simpack/compile.py'...
***   File "./lib/python3.5/site-packages/simpack/compile.py", line 30
    print "Warning, couldn't load", dll
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simpack/dataprovider.py'...
***   File "./lib/python3.5/site-packages/simpack/dataprovider.py", line 129
    print "Compressing datas to", a
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simpack/functions.py'...
***   File "./lib/python3.5/site-packages/simpack/functions.py", line 110
    exec c in d
         ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/simpack/game_base.py'...
***   File "./lib/python3.5/site-packages/simpack/game_base.py", line 133
    print "Normal Exit."
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simpack/gui.py'...
***   File "./lib/python3.5/site-packages/simpack/gui.py", line 21
    def __init__(self, (px, py, w, h)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simpack/request.py'...
***   File "./lib/python3.5/site-packages/simpack/request.py", line 109
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simpack/sockets.py'...
***   File "./lib/python3.5/site-packages/simpack/sockets.py", line 108
    print "Bad message: '%s'." % msg
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simpack/soundmgr.py'...
***   File "./lib/python3.5/site-packages/simpack/soundmgr.py", line 23
    print "Failed to load", p
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/simpack-1.0.0a1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
